Project

General

Profile

Actions

Bug #19791

closed

commands in python module can't work

Added by zhang sw almost 7 years ago. Updated almost 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Commands defined in python module can't work as expected.
eg. 'ceph tell mgr enable_auth false' will return command not support error.

Actions #1

Updated by Tim Serong almost 7 years ago

If this is what I think it is, it'll be fixed once https://github.com/ceph/ceph/pull/14578 is merged.

Actions #2

Updated by zhang sw almost 7 years ago

Yes, that pr can solve this problem. I didn't see that pr yesterday.

Actions #3

Updated by Kefu Chai almost 7 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Kefu Chai almost 7 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF