mgr: Commands defined in python module can't work when using 'ceph tell mgr *'.

Fixes: http://tracker.ceph.com/issues/19791

Signed-off-by: Zhang Shaowen <zhangshaowen@cmss.chinamobile.com>