src/mgr/DaemonServer.cc
@@ -468,166 +468,163 @@ bool DaemonServer::handle_command(MCommand *m)
   mgr_cmd = _get_mgrcommand(prefix, mgr_commands,
                                               ARRAY_SIZE(mgr_commands));
   _generate_command_map(cmdmap, param_str_map);
-  if (!mgr_cmd) {
-    return _reply(m, -EINVAL, "command not supported", odata);
-  }
+  if (mgr_cmd) {
+    // validate user's permissions for requested command
+    if (!_allowed_command(session.get(), mgr_cmd->module, prefix, cmdmap,
+                          param_str_map, mgr_cmd)) {
+      dout(1) << __func__ << " access denied" << dendl;
+      audit_clog->info() << "from='" << session->inst << "' "
+            << "entity='" << session->entity_name << "' "
+            << "cmd=" << m->cmd << ":  access denied";
+      return _reply(m, -EACCES, "access denied", odata);
+    }
 
-  // validate user's permissions for requested command
-  if (!_allowed_command(session.get(), mgr_cmd->module, prefix, cmdmap,
-                        param_str_map, mgr_cmd)) {
-    dout(1) << __func__ << " access denied" << dendl;
-    audit_clog->info() << "from='" << session->inst << "' "
-		       << "entity='" << session->entity_name << "' "
-		       << "cmd=" << m->cmd << ":  access denied";
-    return _reply(m, -EACCES, "access denied", odata);
-  }
+    audit_clog->debug()
+      << "from='" << session->inst << "' "
+      << "entity='" << session->entity_name << "' "
+      << "cmd=" << m->cmd << ": dispatch";
 
-  audit_clog->debug()
-    << "from='" << session->inst << "' "
-    << "entity='" << session->entity_name << "' "
-    << "cmd=" << m->cmd << ": dispatch";
+    // -----------
+    // PG commands
 
-  // -----------
-  // PG commands
-
-  if (prefix == "pg scrub" ||
-      prefix == "pg repair" ||
-      prefix == "pg deep-scrub") {
-    string scrubop = prefix.substr(3, string::npos);
-    pg_t pgid;
-    string pgidstr;
-    cmd_getval(g_ceph_context, cmdmap, "pgid", pgidstr);
-    if (!pgid.parse(pgidstr.c_str())) {
-      ss << "invalid pgid '" << pgidstr << "'";
-      return _reply(m, -EINVAL, ss.str(), odata);
-    }
-    bool pg_exists = false;
-    cluster_state.with_osdmap([&](const OSDMap& osdmap) {
-	pg_exists = osdmap.pg_exists(pgid);
-      });
-    if (!pg_exists) {
-      ss << "pg " << pgid << " dne";
-      return _reply(m, -ENOENT, ss.str(), odata);
-    }
-    int acting_primary = -1;
-    entity_inst_t inst;
-    cluster_state.with_osdmap([&](const OSDMap& osdmap) {
-	acting_primary = osdmap.get_pg_acting_primary(pgid);
-	if (acting_primary >= 0) {
-	  inst = osdmap.get_inst(acting_primary);
-	}
-      });
-    if (acting_primary == -1) {
-      ss << "pg " << pgid << " has no primary osd";
-      return _reply(m, -EAGAIN, ss.str(), odata);
-    }
-    vector<pg_t> pgs = { pgid };
-    msgr->send_message(new MOSDScrub(monc->get_fsid(),
-				     pgs,
-				     scrubop == "repair",
-				     scrubop == "deep-scrub"),
-		       inst);
-    ss << "instructing pg " << pgid << " on osd." << acting_primary
-       << " (" << inst << ") to " << scrubop;
-    return _reply(m, 0, ss.str(), odata);
-  } else if (prefix == "osd reweight-by-pg" ||
-	     prefix == "osd reweight-by-utilization" ||
-	     prefix == "osd test-reweight-by-pg" ||
-	     prefix == "osd test-reweight-by-utilization") {
-    bool by_pg =
-      prefix == "osd reweight-by-pg" || prefix == "osd test-reweight-by-pg";
-    bool dry_run =
-      prefix == "osd test-reweight-by-pg" ||
-      prefix == "osd test-reweight-by-utilization";
-    int64_t oload;
-    cmd_getval(g_ceph_context, cmdmap, "oload", oload, int64_t(120));
-    set<int64_t> pools;
-    vector<string> poolnames;
-    cmd_getval(g_ceph_context, cmdmap, "pools", poolnames);
-    cluster_state.with_osdmap([&](const OSDMap& osdmap) {
-	for (const auto& poolname : poolnames) {
-	  int64_t pool = osdmap.lookup_pg_pool_name(poolname);
-	  if (pool < 0) {
-	    ss << "pool '" << poolname << "' does not exist";
-	    r = -ENOENT;
-	  }
-	  pools.insert(pool);
-	}
-      });
-    if (r) {
-      return _reply(m, r, ss.str(), odata);
-    }
-    double max_change = g_conf->mon_reweight_max_change;
-    cmd_getval(g_ceph_context, cmdmap, "max_change", max_change);
-    if (max_change <= 0.0) {
-      ss << "max_change " << max_change << " must be positive";
-      return _reply(m, -EINVAL, ss.str(), odata);
-    }
-    int64_t max_osds = g_conf->mon_reweight_max_osds;
-    cmd_getval(g_ceph_context, cmdmap, "max_osds", max_osds);
-    if (max_osds <= 0) {
-      ss << "max_osds " << max_osds << " must be positive";
-      return _reply(m, -EINVAL, ss.str(), odata);
-    }
-    string no_increasing;
-    cmd_getval(g_ceph_context, cmdmap, "no_increasing", no_increasing);
-    string out_str;
-    mempool::osdmap::map<int32_t, uint32_t> new_weights;
-    r = cluster_state.with_pgmap([&](const PGMap& pgmap) {
-	return cluster_state.with_osdmap([&](const OSDMap& osdmap) {
-	    return reweight::by_utilization(osdmap, pgmap,
-					    oload,
-					    max_change,
-					    max_osds,
-					    by_pg,
-					    pools.empty() ? NULL : &pools,
-					    no_increasing == "--no-increasing",
-					    &new_weights,
-					    &ss, &out_str, f.get());
-	  });
-      });
-    if (r >= 0) {
-      dout(10) << "reweight::by_utilization: finished with " << out_str << dendl;
-    }
-    if (f)
-      f->flush(odata);
-    else
-      odata.append(out_str);
-    if (r < 0) {
-      ss << "FAILED reweight-by-pg";
-      return _reply(m, r, ss.str(), odata);
-    } else if (r == 0 || dry_run) {
-      ss << "no change";
-      return _reply(m, r, ss.str(), odata);
-    } else {
-      json_spirit::Object json_object;
-      for (const auto& osd_weight : new_weights) {
-	json_spirit::Config::add(json_object,
-				 std::to_string(osd_weight.first),
-				 std::to_string(osd_weight.second));
+    if (prefix == "pg scrub" ||
+        prefix == "pg repair" ||
+        prefix == "pg deep-scrub") {
+      string scrubop = prefix.substr(3, string::npos);
+      pg_t pgid;
+      string pgidstr;
+      cmd_getval(g_ceph_context, cmdmap, "pgid", pgidstr);
+      if (!pgid.parse(pgidstr.c_str())) {
+        ss << "invalid pgid '" << pgidstr << "'";
+        return _reply(m, -EINVAL, ss.str(), odata);
       }
-      string s = json_spirit::write(json_object);
-      std::replace(begin(s), end(s), '\"', '\'');
-      const string cmd =
-	"{"
-	"\"prefix\": \"osd reweightn\", "
-	"\"weights\": \"" + s + "\""
-	"}";
-      auto on_finish = new ReplyOnFinish(this, m, std::move(odata));
-      monc->start_mon_command({cmd}, {},
-			      &on_finish->from_mon, &on_finish->outs, on_finish);
-      return true;
-    }
-  } else {
-    r = cluster_state.with_pgmap([&](const PGMap& pg_map) {
-	return cluster_state.with_osdmap([&](const OSDMap& osdmap) {
-	    return process_pg_map_command(prefix, cmdmap, pg_map, osdmap,
-					  f.get(), &ss, &odata);
-	  });
+      bool pg_exists = false;
+      cluster_state.with_osdmap([&](const OSDMap& osdmap) {
+        pg_exists = osdmap.pg_exists(pgid);
       });
+      if (!pg_exists) {
+        ss << "pg " << pgid << " dne";
+        return _reply(m, -ENOENT, ss.str(), odata);
+      }
+      int acting_primary = -1;
+      entity_inst_t inst;
+      cluster_state.with_osdmap([&](const OSDMap& osdmap) {
+      acting_primary = osdmap.get_pg_acting_primary(pgid);
+      if (acting_primary >= 0) {
+        inst = osdmap.get_inst(acting_primary);
+      }
+        });
+      if (acting_primary == -1) {
+        ss << "pg " << pgid << " has no primary osd";
+        return _reply(m, -EAGAIN, ss.str(), odata);
+      }
+      vector<pg_t> pgs = { pgid };
+      msgr->send_message(new MOSDScrub(monc->get_fsid(),
+                                       pgs,
+                                       scrubop == "repair",
+                                       scrubop == "deep-scrub"),
+                         inst);
+      ss << "instructing pg " << pgid << " on osd." << acting_primary
+         << " (" << inst << ") to " << scrubop;
+      return _reply(m, 0, ss.str(), odata);
+    } else if (prefix == "osd reweight-by-pg" ||
+               prefix == "osd reweight-by-utilization" ||
+               prefix == "osd test-reweight-by-pg" ||
+               prefix == "osd test-reweight-by-utilization") {
+      bool by_pg =
+        prefix == "osd reweight-by-pg" || prefix == "osd test-reweight-by-pg";
+      bool dry_run =
+        prefix == "osd test-reweight-by-pg" ||
+        prefix == "osd test-reweight-by-utilization";
+      int64_t oload;
+      cmd_getval(g_ceph_context, cmdmap, "oload", oload, int64_t(120));
+      set<int64_t> pools;
+      vector<string> poolnames;
+      cmd_getval(g_ceph_context, cmdmap, "pools", poolnames);
+      cluster_state.with_osdmap([&](const OSDMap& osdmap) {
+      for (const auto& poolname : poolnames) {
+        int64_t pool = osdmap.lookup_pg_pool_name(poolname);
+        if (pool < 0) {
+          ss << "pool '" << poolname << "' does not exist";
+          r = -ENOENT;
+        }
+        pools.insert(pool);
+      }
+        });
+      if (r) {
+        return _reply(m, r, ss.str(), odata);
+      }
+      double max_change = g_conf->mon_reweight_max_change;
+      cmd_getval(g_ceph_context, cmdmap, "max_change", max_change);
+      if (max_change <= 0.0) {
+        ss << "max_change " << max_change << " must be positive";
+        return _reply(m, -EINVAL, ss.str(), odata);
+      }
+      int64_t max_osds = g_conf->mon_reweight_max_osds;
+      cmd_getval(g_ceph_context, cmdmap, "max_osds", max_osds);
+      if (max_osds <= 0) {
+        ss << "max_osds " << max_osds << " must be positive";
+        return _reply(m, -EINVAL, ss.str(), odata);
+      }
+      string no_increasing;
+      cmd_getval(g_ceph_context, cmdmap, "no_increasing", no_increasing);
+      string out_str;
+      mempool::osdmap::map<int32_t, uint32_t> new_weights;
+      r = cluster_state.with_pgmap([&](const PGMap& pgmap) {
+        return cluster_state.with_osdmap([&](const OSDMap& osdmap) {
+          return reweight::by_utilization(osdmap, pgmap,
+                                          oload,
+                                          max_change,
+                                          max_osds,
+                                          by_pg,
+                                          pools.empty() ? NULL : &pools,
+                                          no_increasing == "--no-increasing",
+                                          &new_weights,
+                                          &ss, &out_str, f.get());
+        });
+      });
+      if (r >= 0) {
+        dout(10) << "reweight::by_utilization: finished with " << out_str << dendl;
+      }
+      if (f)
+        f->flush(odata);
+      else
+        odata.append(out_str);
+      if (r < 0) {
+        ss << "FAILED reweight-by-pg";
+        return _reply(m, r, ss.str(), odata);
+      } else if (r == 0 || dry_run) {
+        ss << "no change";
+        return _reply(m, r, ss.str(), odata);
+      } else {
+        json_spirit::Object json_object;
+        for (const auto& osd_weight : new_weights) {
+          json_spirit::Config::add(json_object,
+                                   std::to_string(osd_weight.first),
+                                   std::to_string(osd_weight.second));
+        }
+        string s = json_spirit::write(json_object);
+        std::replace(begin(s), end(s), '\"', '\'');
+        const string cmd =
+          "{"
+          "\"prefix\": \"osd reweightn\", "
+          "\"weights\": \"" + s + "\""
+          "}";
+        auto on_finish = new ReplyOnFinish(this, m, std::move(odata));
+        monc->start_mon_command({cmd}, {},
+                                &on_finish->from_mon, &on_finish->outs, on_finish);
+        return true;
+      }
+    } else {
+      r = cluster_state.with_pgmap([&](const PGMap& pg_map) {
+        return cluster_state.with_osdmap([&](const OSDMap& osdmap) {
+          return process_pg_map_command(prefix, cmdmap, pg_map, osdmap,
+                                        f.get(), &ss, &odata);
+        });
+      });
+    }
+    return _reply(m, r, ss.str(), odata);
   }
-  if (r != -EOPNOTSUPP)
-      return _reply(m, r, ss.str(), odata);
   // fall back to registered python handlers
   else {
     // Let's find you a handler!
